edits: editing draft

--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -18,30 +18,30 @@ In this article, we will learn how to build an MCP server for a [FastAPI](https:
 
 ## Requirements
 
-For this article, we are building an MCP server using the Apitizing Burgers API project that you can find [here](https://github.com/koladev32/apitizing-burgers/tree/base-mcp-fastmcp-speakeasy). Clone the project with the following command:
+For this article, we are building an MCP server using the Apitizing Burgers API project that you can find [here](https://github.com/speakeasy-api/examples/tree/main/fastmcp-speakeasy-project/base). Clone the project with the following command:
 
 ```bash
-git clone https://github.com/koladev32/apitizing-burgers
-cd apitizing-burgers/
-git checkout base-mcp-fastmcp-speakeasy
+git clone https://github.com/ritza-co/speakeasy-examples
+cd speakeasy-examples/fastmcp-speakeasy-project/base
 ```
 
 To make the setup easier, we are working with the environment manager `uv`. You can use any tool with which you are familiar. 
 
 ```bash
-uv pip install "fastapi[all]"
+uv venv
+source .venv/bin/activate
 ```
 
-Then, activate the virtual environment. 
+Then, install the required dependencies for the project. The `apitizing-burger` project is already set up with FastAPI, so we will install the FastAPI package and its dependencies. 
 
 ```bash
-source .venv/bin/activate
+uv pip install "fastapi[all]"
 ```
 
 Then run the API using the following command in the `app` directory: 
 
 ```bash
-uvicorn main:app --reload
+uvicorn app.main:server --reload
 ```
 
 We also recommend having [Claude Desktop](https://claude.ai/download) installed on your machine for testing the MCP servers. We can now start integrating FastMCP and Speakeasy in the project to build an MCP server. Let's begin by integrating FastMCP. 
@@ -112,7 +112,7 @@ However, the configuration won't work. Let's have a look at the `claude-desktop-
         "fastmcp",
         "fastmcp",
         "run",
-        "path/to/project/apitizing-burgers/app/mcp_server.py"
+        "path/to/project/fastmcp-speakeasy-project/base/app/mcp_server.py"
       ]
     }
   }
@@ -134,10 +134,10 @@ The `--with` option enables us to specify the dependencies to use when running t
         "fastapi[all]",
         "fastmcp",
         "run",
-        "path/to/project/apitizing-burgers/app/mcp_server.py"
+        "path/to/project/fastmcp-speakeasy-project/base/app/mcp_server.py"
       ],
       "env": {
-        "PYTHONPATH": "/path/to/project/apitizing-burgers"
+        "PYTHONPATH": "path/to/project/fastmcp-speakeasy-project/base/"
       }
     }
   }
@@ -228,7 +228,7 @@ choco install speakeasy
 
 ### 2. Uploading the OpenAPI document
 
-The `apitizing-burger` project already have OpenAPI document files, such as `openapi.yaml` and `openapi.json`. Therefore, we won't need to perform any configuration on that side. 
+Our project already have OpenAPI document files, such as `openapi.yaml` and `openapi.json`. Therefore, we won't need to perform any configuration on that side. 
 
 > 📌**Note**: For your FastAPI project, you will need to generate those files. We have tutorial you can follow to understand how to generate a quality OpenAPI document for your FastAPI project [here](https://www.speakeasy.com/openapi/frameworks/fastapi#basic-fastapi-setup).
 
