--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -38,7 +38,7 @@ Then, install the required dependencies for the project. The `apitizing-burger` 
 uv pip install "fastapi[all]"
 ```
 
-Then run the API using the following command in the `app` directory: 
+Then run the API using the following command: 
 
 ```bash
 uvicorn app.main:server --reload
