--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -16,8 +16,8 @@ In this article, we will learn how to build an MCP server for a [FastAPI](https:
 For this article, we are building an MCP server using the Apitizing Burgers API project that you can find [here](https://github.com/speakeasy-api/examples/tree/main/fastmcp-speakeasy-project/base). Clone the project with the following command:
 
 ```bash
-git clone https://github.com/ritza-co/speakeasy-examples
-cd speakeasy-examples/fastmcp-speakeasy-project/base
+git clone https://github.com/speakeasy-api/examples
+cd examples/fastmcp-speakeasy-project/base
 ```
 
 To make the setup easier, we are working with the environment manager `uv`. You can use any Python environment creation tool which you are familiar with.
@@ -59,7 +59,7 @@ uv pip install fastmcp
 
 Then, create a file in the `app` directory called `mcp_server.py`. This file will contain the code for the MCP server.
 
-```
+```bash
 cd app/ && touch mcp_server.py
 ```
 
@@ -182,7 +182,7 @@ mcp = FastMCP.from_fastapi(
     route_maps=[
         # Exclude delete burger route
         RouteMap(methods="DELETE", pattern=r".*", mcp_type=MCPType.EXCLUDE, tags={"burger"}),
- ],
+    ],
 )
 ```
 
@@ -196,7 +196,7 @@ Without that visibility, debugging tool behavior can be difficult when something
 
 ## Building an MCP server with FastAPI and Speakeasy
 
-[Speakeasy](https://www.speakeasy.com/) is a tool and service that helps you generate SDKs from OpenAPI documents in many languages. Speakeasy supports [generating MCP servers](https://www.speakeasy.com/docs/model-context-protocol) alongside your SDK code (currently only for TypeScript SDKs, with support for additional languages planned). All you need is an OpenAPI file and a [Speakeasy account](https://www.speakeasy.com/docs/introduction#sign-up).
+[Speakeasy](https://www.speakeasy.com/) is a tool and service that helps you generate SDKs from OpenAPI documents in many languages. Speakeasy supports [generating MCP servers](https://www.speakeasy.com/docs/model-context-protocol) alongside your SDK code (currently only for TypeScript SDKs, with support for additional languages planned). All you need is an OpenAPI document and a [Speakeasy account](https://www.speakeasy.com/docs/introduction#sign-up).
 
 Let's see how to build an MCP server with FastAPI and Speakeasy.
 
@@ -225,9 +225,11 @@ choco install speakeasy
 
 ### 2. Uploading the OpenAPI document
 
-Our project already have OpenAPI document files, such as `openapi.yaml` and `openapi.json`. Therefore, we won't need to perform any configuration on that side.
+Our project already has OpenAPI document files, such as `openapi.yaml` and `openapi.json`. Therefore, we won't need to perform any configuration on that side.
 
-> 📌**Note**: For your FastAPI project, you will need to generate those files. We have tutorial you can follow to understand how to generate a quality OpenAPI document for your FastAPI project [here](https://www.speakeasy.com/openapi/frameworks/fastapi#basic-fastapi-setup).
+<Callout title="Note" type="info">
+ For your FastAPI project, you will need to generate those files. We have a tutorial which you can follow to understand how to generate a quality OpenAPI document for your FastAPI project [here](/openapi/frameworks/fastapi#basic-fastapi-setup).
+</Callout>
 
 To initiate the process, run the following command from the project's root directory.
 
@@ -273,27 +275,29 @@ With the MCP server already built, the next step is to configure the MCP server 
 }
 ```
 
-> 📌**Note**: Speakeasy also allows you to install your MCP server after it has been published to the npm registry. In that case, you would use a similar configuration in the `claude-desktop-config.json` file.
->
-> ```json
-> {
->   "mcpServers": {
->     "McpBurgerSDK": {
->       "command": "npx",
->       "args": [
->         "-y",
->         "--package",
->         "mcp-burger-sdk",
->         "--",
->         "mcp",
->         "start",
->         "--api-key",
->         "..."
->       ]
->     }
->   }
-> }
-> ```
+<Callout title="Note" type="info">
+ Speakeasy also allows you to install your MCP server after it has been published to the npm registry. In that case, you would use a similar configuration in the `claude-desktop-config.json` file.
+
+```json
+{
+ "mcpServers": {
+   "McpBurgerSDK": {
+     "command": "npx",
+     "args": [
+       "-y",
+       "--package",
+       "mcp-burger-sdk",
+       "--",
+       "mcp",
+       "start",
+       "--api-key",
+       "..."
+     ]
+   }
+ }
+}
+```
+</Callout>
 
 Once the installation is complete, reload Claude Desktop and you should see the server and its tools available.
 
