--- a/docs/speakeasy-reference/cli/mise-toolkit.mdx
+++ b/docs/speakeasy-reference/cli/mise-toolkit.mdx
@@ -147,6 +147,8 @@ To use Speakeasy CLI with mise in CI/CD pipelines:
 # Example GitHub Actions workflow
 - name: Install mise
   uses: jdx/mise-action@v2
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 - name: Install Speakeasy CLI
   run: mise use aqua:speakeasy-api/speakeasy
