--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -310,19 +310,19 @@ Speakeasy allows you to [customize](https://www.speakeasy.com/docs/model-context
 
 ```yaml
 paths:
- /products:
- post:
- operationId: createProduct
- tags: [products]
- summary: Create a product
- description: API endpoint for creating a product in the CMS
- x-speakeasy-mcp:
- disabled: false
- name: create-product
- scopes: [products, create, ecommerce]
- description: |
- Creates a new product using the provided form. The product name should
- not contain any special characters or harmful words.
+  /products:
+    post:
+      operationId: createProduct
+      tags: [products]
+      summary: Create a product
+      description: API endpoint for creating a product in the CMS
+      x-speakeasy-mcp:
+        disabled: false
+        name: create-product
+        scopes: [products, create, ecommerce]
+        description: |
+          Creates a new product using the provided form. The product name should
+          not contain any special characters or harmful words.
 ```
 
 In the code configuration above: 
@@ -357,14 +357,14 @@ With Speakeasy, when starting the MCP server, you can specify which scopes to in
 
 If modifying the OpenAPI document is a hassle, you can use [Overlays](https://www.speakeasy.com/openapi/overlays), which provides a convenient way to apply the `x-speakeasy-mcp` extension without changing the original file.
 
-```json
+```yaml
 overlay: 1.0.0
 info:
- title: Add MCP scopes
- version: 0.0.0
+  title: Add MCP scopes
+  version: 0.0.0
 actions:
- - target: $.paths.*["post","head","query"]
- update: { "x-speakeasy-mcp": { "scopes": ["products"] } }
+  - target: $.paths.*["post","head","query"]
+    update: { "x-speakeasy-mcp": { "scopes": ["products"] } }
 ```
 
 The code above instructs Speakeasy to generate tools for operations with the tag **products** and HTTP operations of types `POST`, `HEAD`, and `QUERY`.
