--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -183,7 +183,7 @@ mcp = FastMCP.from_fastapi(
         # Exclude delete burger route
         RouteMap(methods="DELETE", pattern=r".*", mcp_type=MCPType.EXCLUDE, tags={"burger"}),
     ],
-)
+  )
 ```
 
 ### Considerations for FastMCP in FastAPI
@@ -264,10 +264,10 @@ With the MCP server already built, the next step is to configure the MCP server 
 ```json
 {
   "mcpServers": {
-    "typescript_mcp_server": {
+    "McpBurgerSDK": {
       "command": "node",
       "args": [
-        "path/to/sdk/mcp-burger-sdk-typescript/bin/mcp-server.js",
+        "path/to/mcp-burger-sdk-typescript/bin/mcp-server.js",
         "start"
       ]
     }
@@ -280,21 +280,21 @@ With the MCP server already built, the next step is to configure the MCP server 
 
 ```json
 {
- "mcpServers": {
-   "McpBurgerSDK": {
-     "command": "npx",
-     "args": [
-       "-y",
-       "--package",
-       "mcp-burger-sdk",
-       "--",
-       "mcp",
-       "start",
-       "--api-key",
-       "..."
-     ]
-   }
- }
+  "mcpServers": {
+    "McpBurgerSDK": {
+      "command": "npx",
+      "args": [
+          "-y",
+          "--package",
+          "mcp-burger-sdk",
+          "--",
+          "mcp",
+          "start",
+          "--api-key",
+          "..."
+      ]
+    }
+  }
 }
 ```
 </Callout>
@@ -328,7 +328,7 @@ paths:
 
 In the code configuration above:
 
-- `disabled` specifies when an operation should be ignored.
+- `disabled` specifies when a tool should be ignored.
 - `name` is used to set the name of the MCP tool, if you are looking to change it.
 - `scopes` are a way of tagging tools, which is helpful when you want to run the MCP server for a specific set of tools only.
 
@@ -341,7 +341,7 @@ With Speakeasy, when starting the MCP server, you can specify which scopes to in
       "command": "npx",
       "args": [
         "-y",
-        "--",
+        "--package",
         "e-commerce-sdk",
         "mcp",
         "start",
@@ -382,7 +382,7 @@ By comparison, Speakeasy generates explicit code for the server and tools in the
 
 ### Setup
 
-One big advantage of using FastMCP with FastAPI is that you can get a working MCP server quckly. FastMCP reuses your existing FastAPI app and requires minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no extra work.
+One big advantage of using FastMCP with FastAPI is that you can get a working MCP server quickly. FastMCP reuses your existing FastAPI app and requires minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no extra work.
 
 In contrast, Speakeasy requires an OpenAPI document and a short CLI flow to generate the server. This setup can take more time upfront but produces a clean SDK structure with the MCP server included, ready to use in Claude Desktop, Cursor AI or as a standalone service.
 
@@ -409,4 +409,4 @@ With Speakeasy, you can publish the MCP server as an NPM package or use it direc
 In this post, we have explored how to build an MCP server for a FastAPI API using FastMCP and Speakeasy. Each tool has its trade-offs, but to summarize:
 
 - Choose FastMCP if you don't have an OpenAPI document or don't plan to deploy and maintain the MCP server long-term. FastMCP is a quick way to turn your existing controllers into tools, and it handles the complexity for you. It's especially useful if you're just exploring the MCP ecosystem or need something running quickly.
-- Choose Speakeasy if you already have an OpenAPI document, plan to maintain the server over time, or want to share it with others. While it requires more setup, it gives you more control, visibility, and customization. Speakeasy also works well for prototyping, especially when you want to build something fast while keeping a path open to production.
+- Choose Speakeasy if you already have an OpenAPI document, plan to maintain the server over time, or want to share it with others. While it requires more initial setup, it gives you more control, visibility, and customization. Speakeasy also works well for prototyping, especially when you want to build something fast while keeping a path open to production.
