--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -5,9 +5,9 @@ description: "A guide to building an MCP server for your FastAPI API using FastM
 
 import { Callout } from "@/mdx/components";
 
-The most interesting usage of MCP servers is communication with APIs. This opens the groundwork for many possible integrations, such as users being able to order via Claude Desktop or developers being able to understand your API using Cursor AI.
+Because MCP servers enable communication with APIs, they open the groundwork for many possible integrations, such as users being able to order food or products via Claude Desktop or developers being able to understand your API using Cursor AI.
 
-But let's be honest. Writing an MCP server from scratch with API integrations while you already have your controllers in place or an OpenAPI document seems tedious and repetitive. So, what if you could generate an MCP server just by having an API ready, just there? That's possible with FastMCP or Speakeasy if you are using FastAPI.
+But let's be honest. Writing an MCP server from scratch with API integrations while you already have your controllers in place or an OpenAPI document seems tedious and repetitive. With FastMCP and Speakeasy, you can generate an MCP server directly from a ready-made API, removing the need to rewrite logic or duplicate schemas making your backend instantly agent-ready.
 
 In this article, we will learn how to build an MCP server for a [FastAPI](https://fastapi.tiangolo.com/) API with [FastMCP](https://gofastmcp.com/getting-started/welcome) and [Speakeasy](https://www.speakeasy.com/). We will then compare the tools on characteristics such as maintenance, code quality, and usage.
 
@@ -376,33 +376,33 @@ You have two solid options for building an MCP server: FastMCP and Speakeasy. Bo
 
 ### Visibility
 
-You don't see how tools are constructed when using FastMCP. FastMCP converts your FastAPI routes into MCP tools automatically, but the internal logic, prompt structure, and resource handling are hidden. This makes debugging harder as your server grows.
+Speakeasy generates explicit code for the server and tools in the `mcp-server` directory. You can inspect how each tool is defined, see the input/output mappings, and modify behavior as needed. This helps when you want to understand or extend how the MCP layer works.
 
-By comparison, Speakeasy generates explicit code for the server and tools in the `mcp-server` directory. You can inspect how each tool is defined, see the input/output mappings, and modify behavior as needed. This helps when you want to understand or extend how the MCP layer works.
+By comparison, you don't see how tools are constructed when using FastMCP. FastMCP converts your FastAPI routes into MCP tools automatically, but the internal logic, prompt structure, and resource handling are hidden. This makes debugging harder as your server grows.
 
 ### Setup
 
-One big advantage of using FastMCP with FastAPI is that you can get a working MCP server quickly. FastMCP reuses your existing FastAPI app and requires minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no extra work.
+Speakeasy requires an OpenAPI document and a short CLI flow to generate the server. While the setup takes a bit more time upfront, it gives you a clean, extensible SDK with an MCP server built in, ready to integrate with Claude Desktop, Cursor AI, or run as a standalone service.
 
-In contrast, Speakeasy requires an OpenAPI document and a short CLI flow to generate the server. This setup can take more time upfront but produces a clean SDK structure with the MCP server included, ready to use in Claude Desktop, Cursor AI or as a standalone service.
+An advantage of using FastMCP with FastAPI is that you can get a working MCP server quickly. FastMCP reuses your existing FastAPI app and requires minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no extra work.
 
 ### Customization
 
-You have limited customization in FastMCP. You can rename tools, set timeouts, or exclude routes using configuration options, but beyond that, you're constrained by what the abstraction allows.
-
 With Speakeasy, customization begins in the OpenAPI document. You can change tool names, disable endpoints, apply scopes, or define overlays for external configuration. This makes it easier to create a curated toolset without touching application code.
+
+You have limited customization in FastMCP. You can rename tools, set timeouts, or exclude routes using configuration options, but beyond that, you're constrained by what the abstraction allows.
 
 ### Maintainability
 
-You stay close to your FastAPI app when using FastMCP. The MCP server depends directly on your controller structure, so changes to endpoints will reflect in the tools. This tight coupling works in smaller projects, but it can introduce friction as the system evolves.
-
 Speakeasy separates your server from your application logic. The OpenAPI document becomes the source of truth, and the MCP server is generated from that document.
+
+With FastMCP, your MCP is very close to your FastAPI app. The MCP server depends directly on your controller structure, so changes to endpoints will reflect in the tools. This tight coupling works in smaller projects, but it can introduce friction as the system evolves.
 
 ### Distribution
 
-You typically run FastMCP locally inside Claude Desktop. FastMCP works well for local tools, but it's not built for external packaging or reuse across environments.
-
 With Speakeasy, you can publish the MCP server as an NPM package or use it directly with `npx`. This allows you to distribute tools across environments or share access with other teams and your users.
+
+You typically run FastMCP locally inside Claude Desktop. FastMCP works well for local tools, but it's not built for external packaging or reuse across environments.
 
 ## Final Thoughts
 
