[PMM-279] Mutual TLS new

--- a/openapi/security/security-schemes/security-mutualtls.mdx
+++ b/openapi/security/security-schemes/security-mutualtls.mdx
@@ -45,4 +45,5 @@ components:
         full information about what this application is to obtain a certificate.
 ```
 
-That's all there is to this one.
+Learn more about Mutual TLS in the [OpenAPI Specification](https://spec.openapis.org/oas/v3.1.0#mutual-tls-security-scheme),
+or on Cloudflare's [What is Mutual TLS](https://www.cloudflare.com/learning/access-management/what-is-mutual-tls/).
